/*
 * CHANGELOG.
 */

09292004 - Every API that can return a list of strings can now use a
           callback mechanism if the application wants to do it's own
           allocation or handling on a per-item basis. The guts of those
           APIs that create string lists now use the callbacks themselves to
           build the lists, too. The callback functionality goes all the way
           down to the archivers and platform drivers where appropriate, which
           cleans things up and simplifies some internal tasks very nicely.
           Got rid of all the annoying forward declarations in all the
           archivers and moved their PHYSFS_Archiver data to the end of the
           file, since this was annoying me and I was getting sick of updating
           function signatures in two places when the internal API changed.
           Removed the code/data for LinkedStringLists...it isn't used anymore
           now that the callback code is in place.
09262004 - Did the same thing to FileHandles than I did to DirHandles, but
           this triggered massive tweaking in physfs.c. A lot of code got
           little cleanups, which was nice. Less malloc pressure, too, since
           opening a file used to allocate a ton of crap and mush it
           together...now it's basically down to one structure and the
           instance data in whatever archiver. Minor varname tweak in win32.c
           and pocketpc.c. Changed PHYSFS_file to PHYSFS_File to match the
           rest of the API's naming scheme (but put a typedef for source
           compatibility).
09252004 - Cleaned up archiver interface to not deal with DirHandles anymore,
           which simplifies things, removes some responsibility and code
           duplication from the archivers, and trims some malloc pressure.
           Ripped up the allocation hook code a little. We'll try to screw
           with memory locking later, since it makes everything ugly and
           complex. Oh well.