@@ -38,7 +38,6 @@ Some might be dupes, some might be done already.
 - General code audit.
 - Multiple write dirs with mount points?
 - Deprecate PHYSFS_setSaneConfig and move it to extras?
-- (Re)move the profiling code in physfs.c.
 - Why is physfsrwops.c cut-and-pasted into the ruby bindings?
 - Replace code from SDL...
 - MIX grabs all archives that no other archivers claim.
